# LaVraiBiblioDeFranck

./: Book.c  Book.h  CMakeLists.txt  Client.c  Client.h  DBBooks.c  DBBooks.h  DBClients.c  DBClients.h  DB_Books.c  DB_Books.h  DB_Clients.c  DB_Clients.h  Date.c  Date.h  LinkedList.c  LinkedList.h  Menu.c  Menu.h  main.c
asm-xml-1.4/: LICENSE.txt  README.txt
asm-xml-1.4/benchmark/: bench.cpp
asm-xml-1.4/doc/: default.css  documentation.html
asm-xml-1.4/examples/: mingw.mak  table.csv
asm-xml-1.4/utils/: gen-header.rb
